Process: Qt Creator [84831]
Path: /Users/Shared/*/Qt Creator.app/Contents/MacOS/Qt Creator
Identifier: org.qt-project.qtcreator
Version: 3.2.81 (3.2.81)
Code Type: X86-64 (Native)
Parent Process: launchd [364]
Responsible: Qt Creator [84831]
Crashed Thread: 0 Dispatch queue: com.apple.main-thread
Exception Type: EXC_BAD_ACCESS (SIGSEGV)
Exception Codes: KERN_INVALID_ADDRESS at 0x0000000000000010
VM Regions Near 0x10:
-->
__TEXT 00000001064d4000-00000001064ee000 [ 104K] r-x/rwx SM=COW /Users/Shared/*/Qt Creator.app/Contents/MacOS/Qt Creator
Application Specific Information:
Performing @selector(itemFired:) from sender NSMenuItem 0x6000002ac4e0
Thread 0 Crashed:: Dispatch queue: com.apple.main-thread
0 libCPlusPlus_debug.1.0.0.dylib 0x000000010e532eb4 CPlusPlus::Document::translationUnit() const + 4 (CppDocument.cpp:448)
1 libCppEditor_debug.dylib 0x000000011115eadb CppEditor::Internal::CppUseSelectionsUpdater::toExtraSelections(QList<int> const&, TextEditor::TextStyle) const + 283
2 libCppEditor_debug.dylib 0x000000011115e0b3 CppEditor::Internal::CppUseSelectionsUpdater::processSymbolCaseResults(CppEditor::Internal::UseSelectionsResult const&) + 259
3 libCppEditor_debug.dylib 0x000000011115dd63 CppEditor::Internal::CppUseSelectionsUpdater::handleSymbolCaseSynchronously(QSharedPointer<CPlusPlus::Document>, CPlusPlus::Snapshot const&) + 211
4 libCppEditor_debug.dylib 0x000000011115d0c0 CppEditor::Internal::CppUseSelectionsUpdater::update(CppEditor::Internal::CppUseSelectionsUpdater::CallType) + 1056
5 libCppEditor_debug.dylib 0x00000001110ad26b CppEditor::Internal::CppEditorWidget::updateSemanticInfo(CppTools::SemanticInfo const&, bool) + 203
6 libCppEditor_debug.dylib 0x00000001110addba CppEditor::Internal::CppEditorWidget::renameSymbolUnderCursor() + 106
7 libCppEditor_debug.dylib 0x00000001110c228c CppEditor::Internal::CppEditorPlugin::renameSymbolUnderCursor() + 44
8 libCppEditor_debug.dylib 0x000000011119f662 CppEditor::Internal::CppEditorPlugin::qt_static_metacall(QObject*, QMetaObject::Call, int, void**) + 226 (moc_cppeditorplugin.cpp:578)
9 QtCore 0x00000001076c259a QMetaObject::activate(QObject*, int, int, void**) + 618
10 QtWidgets 0x00000001068a6178 QAction::qt_static_metacall(QObject*, QMetaObject::Call, int, void**) + 344
11 QtCore 0x00000001076c259a QMetaObject::activate(QObject*, int, int, void**) + 618
12 QtWidgets 0x00000001068a5d5f QAction::activate(QAction::ActionEvent) + 271
13 QtWidgets 0x00000001068a61b4 QAction::qt_static_metacall(QObject*, QMetaObject::Call, int, void**) + 404
14 QtCore 0x00000001076c259a QMetaObject::activate(QObject*, int, int, void**) + 618
15 libqcocoa.dylib 0x00000001096e6050 -[QCocoaMenuDelegate itemFired:] + 112
16 com.apple.AppKit 0x00007fff932a0260 -[NSApplication sendAction:to:from:] + 327
17 com.apple.AppKit 0x00007fff932bb1c8 -[NSMenuItem _corePerformAction] + 394
18 com.apple.AppKit 0x00007fff932baf04 -[NSCarbonMenuImpl performActionWithHighlightingForItemAtIndex:] + 117
19 com.apple.AppKit 0x00007fff932ba07c -[NSMenu performKeyEquivalent:] + 289
20 com.apple.AppKit 0x00007fff932b68e1 -[NSApplication _handleKeyEquivalent:] + 822
21 com.apple.AppKit 0x00007fff93225acc -[NSApplication sendEvent:] + 3293
22 libqcocoa.dylib 0x00000001096e5c4e -[QNSApplication sendEvent:] + 78
23 com.apple.AppKit 0x00007fff930759f9 -[NSApplication run] + 646
24 libqcocoa.dylib 0x00000001096e26d5 QCocoaEventDispatcher::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) + 2165
25 QtCore 0x000000010768ec0d QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) + 381
26 QtCore 0x0000000107691b0c QCoreApplication::exec() + 364
27 org.qt-project.qtcreator 0x00000001064e0e3e main + 13486 (main.cpp:531)
28 org.qt-project.qtcreator 0x00000001064d99f4 start + 52
Thread 1:: Dispatch queue: com.apple.libdispatch-manager
0 libsystem_kernel.dylib 0x00007fff8abef662 kevent64 + 10
1 libdispatch.dylib 0x00007fff880d4421 _dispatch_mgr_invoke + 239
2 libdispatch.dylib 0x00007fff880d4136 _dispatch_mgr_thread + 52
Thread 2:: com.apple.CFSocket.private
0 libsystem_kernel.dylib 0x00007fff8abee9aa __select + 10
1 com.apple.CoreFoundation 0x00007fff8dd04a03 __CFSocketManager + 867
2 libsystem_pthread.dylib 0x00007fff94b24899 _pthread_body + 138
3 libsystem_pthread.dylib 0x00007fff94b2472a _pthread_start + 137
4 libsystem_pthread.dylib 0x00007fff94b28fc9 thread_start + 13
Thread 3:: Qt bearer thread
0 libsystem_kernel.dylib 0x00007fff8abee9aa __select + 10
1 libsystem_c.dylib 0x00007fff8f161be0 pselect$1050 + 183
2 QtCore 0x00000001076e02c8 qt_safe_select(int, fd_set*, fd_set*, fd_set*, timespec const*) + 104
3 QtCore 0x00000001076e1384 QEventDispatcherUNIXPrivate::doSelect(QFlags<QEventLoop::ProcessEventsFlag>, timespec*) + 660
4 QtCore 0x00000001076e249a QEventDispatcherUNIX::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) + 234
5 QtCore 0x000000010768ec0d QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) + 381
6 QtCore 0x00000001074976a5 QThread::exec() + 117
7 QtCore 0x000000010749b253 QThreadPrivate::start(void*) + 339
8 libsystem_pthread.dylib 0x00007fff94b24899 _pthread_body + 138
9 libsystem_pthread.dylib 0x00007fff94b2472a _pthread_start + 137
10 libsystem_pthread.dylib 0x00007fff94b28fc9 thread_start + 13
Thread 4:: QProcessManager
0 libsystem_kernel.dylib 0x00007fff8abee9aa __select + 10
1 QtCore 0x0000000107634877 QProcessManager::run() + 135
2 QtCore 0x000000010749b253 QThreadPrivate::start(void*) + 339
3 libsystem_pthread.dylib 0x00007fff94b24899 _pthread_body + 138
4 libsystem_pthread.dylib 0x00007fff94b2472a _pthread_start + 137
5 libsystem_pthread.dylib 0x00007fff94b28fc9 thread_start + 13
Thread 5:: QThread
0 libsystem_kernel.dylib 0x00007fff8abee9aa __select + 10
1 QtCore 0x00000001076e04b4 qt_safe_select(int, fd_set*, fd_set*, fd_set*, timespec const*) + 596
2 QtCore 0x00000001076e1384 QEventDispatcherUNIXPrivate::doSelect(QFlags<QEventLoop::ProcessEventsFlag>, timespec*) + 660
3 QtCore 0x00000001076e249a QEventDispatcherUNIX::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) + 234
4 QtCore 0x000000010768ec0d QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) + 381
5 QtCore 0x00000001074976a5 QThread::exec() + 117
6 QtCore 0x000000010749b253 QThreadPrivate::start(void*) + 339
7 libsystem_pthread.dylib 0x00007fff94b24899 _pthread_body + 138
8 libsystem_pthread.dylib 0x00007fff94b2472a _pthread_start + 137
9 libsystem_pthread.dylib 0x00007fff94b28fc9 thread_start + 13
Thread 6:: QQmlThread
0 libsystem_kernel.dylib 0x00007fff8abee9aa __select + 10
1 QtCore 0x00000001076e04b4 qt_safe_select(int, fd_set*, fd_set*, fd_set*, timespec const*) + 596
2 QtCore 0x00000001076e1384 QEventDispatcherUNIXPrivate::doSelect(QFlags<QEventLoop::ProcessEventsFlag>, timespec*) + 660
3 QtCore 0x00000001076e249a QEventDispatcherUNIX::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) + 234
4 QtCore 0x000000010768ec0d QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) + 381
5 QtCore 0x00000001074976a5 QThread::exec() + 117
6 QtCore 0x000000010749b253 QThreadPrivate::start(void*) + 339
7 libsystem_pthread.dylib 0x00007fff94b24899 _pthread_body + 138
8 libsystem_pthread.dylib 0x00007fff94b2472a _pthread_start + 137
9 libsystem_pthread.dylib 0x00007fff94b28fc9 thread_start + 13
Thread 7:: QSGRenderThread
0 libsystem_kernel.dylib 0x00007fff8abee716 __psynch_cvwait + 10
1 libsystem_pthread.dylib 0x00007fff94b26c3b _pthread_cond_wait + 727
2 QtCore 0x000000010749c9eb QWaitConditionPrivate::wait(unsigned long) + 75
3 QtCore 0x000000010749c888 QWaitCondition::wait(QMutex*, unsigned long) + 168
4 QtQuick 0x000000010e1371fd QSGRenderThread::processEventsAndWaitForMore() + 93
5 QtQuick 0x000000010e1372ac QSGRenderThread::run() + 92
6 QtCore 0x000000010749b253 QThreadPrivate::start(void*) + 339
7 libsystem_pthread.dylib 0x00007fff94b24899 _pthread_body + 138
8 libsystem_pthread.dylib 0x00007fff94b2472a _pthread_start + 137
9 libsystem_pthread.dylib 0x00007fff94b28fc9 thread_start + 13
Thread 8:
0 libsystem_kernel.dylib 0x00007fff8abeaa1a mach_msg_trap + 10
1 libsystem_kernel.dylib 0x00007fff8abe9d18 mach_msg + 64
2 com.apple.CoreFoundation 0x00007fff8dcb8f15 __CFRunLoopServiceMachPort + 181
3 com.apple.CoreFoundation 0x00007fff8dcb8539 __CFRunLoopRun + 1161
4 com.apple.CoreFoundation 0x00007fff8dcb7e75 CFRunLoopRunSpecific + 309
5 com.apple.AppKit 0x00007fff9322205e _NSEventThread + 144
6 libsystem_pthread.dylib 0x00007fff94b24899 _pthread_body + 138
7 libsystem_pthread.dylib 0x00007fff94b2472a _pthread_start + 137
8 libsystem_pthread.dylib 0x00007fff94b28fc9 thread_start + 13
Thread 9:: JavaScriptCore::BlockFree
0 libsystem_kernel.dylib 0x00007fff8abee716 __psynch_cvwait + 10
1 libsystem_pthread.dylib 0x00007fff94b26c3b _pthread_cond_wait + 727
2 QtWebKit 0x0000000115101ad4 JSC::BlockAllocator::blockFreeingThreadMain() + 260
3 QtWebKit 0x00000001153d8ebf WTF::wtfThreadEntryPoint(void*) + 15
4 libsystem_pthread.dylib 0x00007fff94b24899 _pthread_body + 138
5 libsystem_pthread.dylib 0x00007fff94b2472a _pthread_start + 137
6 libsystem_pthread.dylib 0x00007fff94b28fc9 thread_start + 13
Thread 10:: JavaScriptCore::Marking
0 libsystem_kernel.dylib 0x00007fff8abee716 __psynch_cvwait + 10
1 libsystem_pthread.dylib 0x00007fff94b26c3b _pthread_cond_wait + 727
2 QtWebKit 0x0000000115102977 JSC::GCThread::waitForNextPhase() + 119
3 QtWebKit 0x0000000115102a08 JSC::GCThread::gcThreadMain() + 88
4 QtWebKit 0x00000001153d8ebf WTF::wtfThreadEntryPoint(void*) + 15
5 libsystem_pthread.dylib 0x00007fff94b24899 _pthread_body + 138
6 libsystem_pthread.dylib 0x00007fff94b2472a _pthread_start + 137
7 libsystem_pthread.dylib 0x00007fff94b28fc9 thread_start + 13
Thread 11:: JavaScriptCore::Marking
0 libsystem_kernel.dylib 0x00007fff8abee716 __psynch_cvwait + 10
1 libsystem_pthread.dylib 0x00007fff94b26c3b _pthread_cond_wait + 727
2 QtWebKit 0x0000000115102977 JSC::GCThread::waitForNextPhase() + 119
3 QtWebKit 0x0000000115102a08 JSC::GCThread::gcThreadMain() + 88
4 QtWebKit 0x00000001153d8ebf WTF::wtfThreadEntryPoint(void*) + 15
5 libsystem_pthread.dylib 0x00007fff94b24899 _pthread_body + 138
6 libsystem_pthread.dylib 0x00007fff94b2472a _pthread_start + 137
7 libsystem_pthread.dylib 0x00007fff94b28fc9 thread_start + 13
Thread 12:: JavaScriptCore::Marking
0 libsystem_kernel.dylib 0x00007fff8abee716 __psynch_cvwait + 10
1 libsystem_pthread.dylib 0x00007fff94b26c3b _pthread_cond_wait + 727
2 QtWebKit 0x0000000115102977 JSC::GCThread::waitForNextPhase() + 119
3 QtWebKit 0x0000000115102a08 JSC::GCThread::gcThreadMain() + 88
4 QtWebKit 0x00000001153d8ebf WTF::wtfThreadEntryPoint(void*) + 15
5 libsystem_pthread.dylib 0x00007fff94b24899 _pthread_body + 138
6 libsystem_pthread.dylib 0x00007fff94b2472a _pthread_start + 137
7 libsystem_pthread.dylib 0x00007fff94b28fc9 thread_start + 13
Thread 13:: JavaScriptCore::Marking
0 libsystem_kernel.dylib 0x00007fff8abee716 __psynch_cvwait + 10
1 libsystem_pthread.dylib 0x00007fff94b26c3b _pthread_cond_wait + 727
2 QtWebKit 0x0000000115102977 JSC::GCThread::waitForNextPhase() + 119
3 QtWebKit 0x0000000115102a08 JSC::GCThread::gcThreadMain() + 88
4 QtWebKit 0x00000001153d8ebf WTF::wtfThreadEntryPoint(void*) + 15
5 libsystem_pthread.dylib 0x00007fff94b24899 _pthread_body + 138
6 libsystem_pthread.dylib 0x00007fff94b2472a _pthread_start + 137
7 libsystem_pthread.dylib 0x00007fff94b28fc9 thread_start + 13
Thread 14:: JavaScriptCore::Marking
0 libsystem_kernel.dylib 0x00007fff8abee716 __psynch_cvwait + 10
1 libsystem_pthread.dylib 0x00007fff94b26c3b _pthread_cond_wait + 727
2 QtWebKit 0x0000000115102977 JSC::GCThread::waitForNextPhase() + 119
3 QtWebKit 0x0000000115102a08 JSC::GCThread::gcThreadMain() + 88
4 QtWebKit 0x00000001153d8ebf WTF::wtfThreadEntryPoint(void*) + 15
5 libsystem_pthread.dylib 0x00007fff94b24899 _pthread_body + 138
6 libsystem_pthread.dylib 0x00007fff94b2472a _pthread_start + 137
7 libsystem_pthread.dylib 0x00007fff94b28fc9 thread_start + 13
Thread 15:: JavaScriptCore::Marking
0 libsystem_kernel.dylib 0x00007fff8abee716 __psynch_cvwait + 10
1 libsystem_pthread.dylib 0x00007fff94b26c3b _pthread_cond_wait + 727
2 QtWebKit 0x0000000115102977 JSC::GCThread::waitForNextPhase() + 119
3 QtWebKit 0x0000000115102a08 JSC::GCThread::gcThreadMain() + 88
4 QtWebKit 0x00000001153d8ebf WTF::wtfThreadEntryPoint(void*) + 15
5 libsystem_pthread.dylib 0x00007fff94b24899 _pthread_body + 138
6 libsystem_pthread.dylib 0x00007fff94b2472a _pthread_start + 137
7 libsystem_pthread.dylib 0x00007fff94b28fc9 thread_start + 13