C++: set the document field in the synchronous case.

Task-number: QTCREATORBUG-12975
Change-Id: I9a4b8c69e925e288b7b02263c27f9791748bac85
Reviewed-by: Nikolai Kosjar <nikolai.kosjar@digia.com>